--- a/css/estilos.css
+++ b/css/estilos.css
@@ -140,6 +140,13 @@ h3 {
     margin: 1rem 0;
     text-align: center;
     line-height: 1.2;
+    font-size: 2.8rem;
+}
+@media (min-width: 480px) {
+    .producto__nombre,
+    .producto__precio {
+    font-size: 4.4rem;
+}
 }
 
 
