--- a/css/estilos.css
+++ b/css/estilos.css
@@ -100,7 +100,7 @@ h3 {
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(2, 50%);
+  grid-template-columns: repeat(2, 1fr);
   gap: 2rem;
 }
 
